--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">SwitchFreeForm</string>
-    <string name="app_info">拉动小窗应用全屏时自动将底层全屏应用切换为小窗模式。</string>
+    <string name="app_info">拖动小窗至全屏时自动将底层全屏应用切换为小窗模式。</string>
 </resources>
